--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 
-	<modelVersion>4.0.0</modelVersion>
-	<packaging>pom</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
-	<groupId>net.anzix.kogutowicz</groupId>
-	<artifactId>root</artifactId>
-	<version>1.0-SNAPSHOT</version>
+    <groupId>net.anzix.kogutowicz</groupId>
+    <artifactId>root</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>kogutowicz root</name>
 
-
-	<modules>
-		<module>renderer</module>
-    <module>samples</module>
-  </modules>
+    <modules>
+        <module>renderer</module>
+        <module>samples</module>
+    </modules>
 
 
 
