--- a/renderer/pom.xml
+++ b/renderer/pom.xml
@@ -1,20 +1,24 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.anzix.kogutowicz</groupId>
     <artifactId>renderer</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>kogutowicz renderer</name>
-    <url>http://maven.apache.org</url>
+    <parent>
+        <artifactId>root</artifactId>
+        <groupId>net.anzix.kogutowicz</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <repositories>
         <repository>
             <id>anzix</id>
             <url>http://anzix.net/nexus/content/groups/public/</url>
         </repository>
     </repositories>
-  
+
     <build>
 
         <plugins>
@@ -49,7 +53,7 @@
                                     <Plugin-Mainversion>1724</Plugin-Mainversion-->
                                 <!--/manifest-->
                             </archive>
-							
+
                         </configuration>
                     </execution>
                 </executions>
