--- a/renderer/pom.xml
+++ b/renderer/pom.xml
@@ -89,6 +89,16 @@
             <artifactId>osmosis</artifactId>
             <version>0.31</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.0.2.GA</version>
+        </dependency>
         <!--dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
