--- a/renderer/src/it/nk.properties
+++ b/renderer/src/it/nk.properties
@@ -2,16 +2,20 @@ map=net.anzix.kogutowicz.app.ImageMap
 
 map.zoom=14
 
-map.outputFile=target/nk/terkep.png
+
 map.datasource=net.anzix.kogutowicz.datasource.OsmFile
 map.datasource.osmFile=src/it/sources/nagykovacsi.osm
 
-map.output=target/site/it/nagykovacsi.png
+
 
 #map.mapStyle=net.anzix.kogutowicz.style.TuhuStyleFactory
 
 map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
 map.mapStyle.source=src/it/styles/osmstyle.csv
+
+map.renderer=net.anzix.kogutowicz.renderer.PngRenderer
+map.renderer.outputFile=target/site/it/nagykovacsi.png
+
 
 
 map.west=18.87
