--- a/renderer/src/it/nk.properties
+++ b/renderer/src/it/nk.properties
@@ -4,17 +4,17 @@ map.zoom=14
 
 
 map.datasource=net.anzix.kogutowicz.datasource.OsmFile
-map.datasource.osmFile=src/it/sources/nagykovacsi.osm
+map.datasource.osmFile=sources/nagykovacsi.osm
 
 
 
 #map.mapStyle=net.anzix.kogutowicz.style.TuhuStyleFactory
 
 map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
-map.mapStyle.source=src/it/styles/osmstyle.csv
+map.mapStyle.source=styles/osmstyle.csv
 
 map.renderer=net.anzix.kogutowicz.renderer.PngRenderer
-map.renderer.outputFile=target/site/it/nagykovacsi.png
+map.renderer.outputFile=../../target/samples/nagykovacsi.png
 
 
 
