--- a/renderer/src/it/remete-svg.properties
+++ b/renderer/src/it/remete-svg.properties
@@ -2,15 +2,14 @@ map=net.anzix.kogutowicz.app.ImageMap
 
 map.zoom=14
 
-map.output=target/site/it/remete.png
 map.datasource=net.anzix.kogutowicz.datasource.OsmFile
-map.datasource.osmFile=src/it/sources/remete.osm
+map.datasource.osmFile=sources/remete.osm
 
 map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
-map.mapStyle.source=src/it/styles/osmstyle.csv
+map.mapStyle.source=styles/osmstyle.csv
 
 map.renderer=net.anzix.kogutowicz.renderer.SvgRenderer
-map.renderer.outputFile=target/site/samples/remete.svg
+map.renderer.outputFile=../../target/samples/remete.svg
 
 
 map.west=18.921
