--- a/renderer/src/it/remete-tiles.properties
+++ b/renderer/src/it/remete-tiles.properties
@@ -2,12 +2,12 @@ map=net.anzix.kogutowicz.app.TilesMap
 
 map.zoom=14
 
-map.outputDir=target/site/it/remete-tiles
+map.outputDir=../../target/samples/remete-tiles
 map.datasource=net.anzix.kogutowicz.datasource.OsmFile
-map.datasource.osmFile=src/it/sources/remete.osm
+map.datasource.osmFile=sources/remete.osm
 
 map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
-map.mapStyle.source=src/it/styles/osmstyle.csv
+map.mapStyle.source=styles/osmstyle.csv
 
 map.west=18.921
 map.north=47.58
