--- a/renderer/src/it/remete.properties
+++ b/renderer/src/it/remete.properties
@@ -3,13 +3,13 @@ map=net.anzix.kogutowicz.app.ImageMap
 map.zoom=14
 
 map.datasource=net.anzix.kogutowicz.datasource.OsmFile
-map.datasource.osmFile=src/it/sources/remete.osm
+map.datasource.osmFile=sources/remete.osm
 
 map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
-map.mapStyle.source=src/it/styles/osmstyle.csv
+map.mapStyle.source=styles/osmstyle.csv
 
 map.renderer=net.anzix.kogutowicz.renderer.PngRenderer
-map.renderer.outputFile=target/site/it/remete.png
+map.renderer.outputFile=../../target/samples/remete.png
 
 
 map.west=18.921
