Allow short class name in config property file

--- a/renderer/src/it/nk.properties
+++ b/renderer/src/it/nk.properties
@@ -1,19 +1,19 @@
-map=net.anzix.kogutowicz.app.ImageMap
+map=ImageMap
 
 map.zoom=14
 
 
-map.datasource=net.anzix.kogutowicz.datasource.OsmFile
+map.datasource=OsmFile
 map.datasource.osmFile=sources/nagykovacsi.osm
 
 
 
 #map.mapStyle=net.anzix.kogutowicz.style.TuhuStyleFactory
 
-map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
+map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
-map.renderer=net.anzix.kogutowicz.renderer.PngRenderer
+map.renderer=PngRenderer
 map.renderer.outputFile=../../target/samples/nagykovacsi.png
 
 
