--- a/renderer/pom.xml
+++ b/renderer/pom.xml
@@ -83,6 +83,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>org.kohsuke.metainf-services</groupId>
+            <artifactId>metainf-services</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.guice</groupId>
             <artifactId>guice</artifactId>
             <version>2.0.1</version>
