--- a/renderer/src/it/mapnik.properties
+++ b/renderer/src/it/mapnik.properties
@@ -9,6 +9,7 @@ map.mapStyle=net.anzix.kogutowicz.style.parser.MapnikMapStyle
 map.mapStyle.source=../test/mapnik-short.xml
 #map.mapStyle.source=../test/osm-template.xml
 
+#map.renderer=net.anzix.kogutowicz.renderer.SystemOutputRenderer
 map.renderer=net.anzix.kogutowicz.renderer.PngRenderer
 map.renderer.outputFile=../../target/samples/mapnik.png
 
