--- a/renderer/src/it/remete.properties
+++ b/renderer/src/it/remete.properties
@@ -1,14 +1,14 @@
 map=ImageMap
 
-map.zoom=14
+map.zoom=13
 
-map.datasource=OsmFile
+map.datasource=net.anzix.kogutowicz.datasource.OsmFile
 map.datasource.osmFile=sources/remete.osm
 
-map.mapStyle=CsvMapStyle
+map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
-map.renderer=PngRenderer
+map.renderer=net.anzix.kogutowicz.renderer.PngRenderer
 map.renderer.outputFile=../../target/samples/remete.png
 
 
