--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,82 @@
 
     <modules>
         <module>renderer</module>
-  </modules>
+    </modules>
+    <scm>
+        <connection>scm:hg:https://kogutowicz.googlecode.com/hg/</connection>
+        <developerConnection>scm:hg:${hg.repo.url}</developerConnection>
+        <url>http://code.google.com/p/kogutowicz</url>
+    </scm>
+    <properties>
+        <hg.repo.url>https://kogutowicz.googlecode.com/hg/</hg.repo.url>
+        <staging.mvn.repo.url>file://${project.build.directory}/target/target-maven-repo</staging.mvn.repo.url>
+    </properties>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <properties>
+                <hg.repo.url>file://${project.build.directory}/target/dummy-hg-repo</hg.repo.url>
+                <altDeploymentRepository>release-repo-hudson::default::${staging.mvn.repo.url}</altDeploymentRepository>
+            </properties>
 
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>clean-release-dirs</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <inherited>false</inherited>
+                                <configuration>
+                                    <executable>rm</executable>
+                                    <arguments>
+                                        <argument>-rf</argument>
+                                        <argument>${project.build.directory}/target/dummy-hg-repo</argument>
+                                        <argument>${project.build.directory}/target/maven-repo</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>create-release-dirs</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <inherited>false</inherited>
+                                <configuration>
+                                    <executable>mkdir</executable>
+                                    <arguments>
+                                        <argument>-p</argument>
+                                        <argument>${project.build.directory}/target/dummy-hg-repo</argument>
+                                        <argument>${project.build.directory}/target/maven-repo</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
 
-
+                            <execution>
+                                <id>init-dummy-hg-repo</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <inherited>false</inherited>
+                                <configuration>
+                                    <executable>hg</executable>
+                                    <workingDirectory>${project.build.directory}/target/dummy-hg-repo</workingDirectory>
+                                    <arguments>
+                                        <argument>init</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
