--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.1.1</version>
                         <executions>
                             <execution>
                                 <id>clean-release-dirs</id>
