fix using short class name

--- a/renderer/src/it/remete-tiles.properties
+++ b/renderer/src/it/remete-tiles.properties
@@ -1,12 +1,12 @@
-map=net.anzix.kogutowicz.app.TilesMap
+map=TilesMap
 
 map.zoom=14
 
 map.outputDir=../../target/samples/remete-tiles
-map.datasource=net.anzix.kogutowicz.datasource.OsmFile
+map.datasource=OsmFile
 map.datasource.osmFile=sources/remete.osm
 
-map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
+map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
 map.west=18.921
