--- a/renderer/src/it/remete.properties
+++ b/renderer/src/it/remete.properties
@@ -2,13 +2,13 @@ map=ImageMap
 
 map.zoom=13
 
-map.datasource=net.anzix.kogutowicz.datasource.OsmFile
+map.datasource=OsmFile
 map.datasource.osmFile=sources/remete.osm
 
-map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
+map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
-map.renderer=net.anzix.kogutowicz.renderer.PngRenderer
+map.renderer=PngRenderer
 map.renderer.outputFile=../../target/samples/remete.png
 
 
