--- a/renderer/src/it/mapnik.properties
+++ b/renderer/src/it/mapnik.properties
@@ -1,16 +1,16 @@
-map=net.anzix.kogutowicz.app.ImageMap
+map=ImageMap
 
 map.zoom=13
 
-map.datasource=net.anzix.kogutowicz.datasource.OsmFile
+map.datasource=OsmFile
 map.datasource.osmFile=sources/remete.osm
 
-map.mapStyle=net.anzix.kogutowicz.style.parser.MapnikMapStyle
+map.mapStyle=MapnikMapStyle
 map.mapStyle.source=../test/mapnik-short.xml
 #map.mapStyle.source=../test/osm-template.xml
 
 #map.renderer=net.anzix.kogutowicz.renderer.SystemOutputRenderer
-map.renderer=net.anzix.kogutowicz.renderer.PngRenderer
+map.renderer=PngRenderer
 map.renderer.outputFile=../../target/samples/mapnik.png
 
 
