--- a/renderer/src/it/remete-svg.properties
+++ b/renderer/src/it/remete-svg.properties
@@ -1,14 +1,14 @@
-map=net.anzix.kogutowicz.app.ImageMap
+map=ImageMap
 
 map.zoom=14
 
-map.datasource=net.anzix.kogutowicz.datasource.OsmFile
+map.datasource=OsmFile
 map.datasource.osmFile=sources/remete.osm
 
-map.mapStyle=net.anzix.kogutowicz.style.parser.CsvMapStyle
+map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
-map.renderer=net.anzix.kogutowicz.renderer.SvgRenderer
+map.renderer=SvgRenderer
 map.renderer.outputFile=../../target/samples/remete.svg
 
 
