ability to set pixel width of ImageMap

--- a/renderer/src/it/remete.properties
+++ b/renderer/src/it/remete.properties
@@ -1,6 +1,6 @@
 map=ImageMap
 
-map.zoom=13
+map.zoom=12
 
 map.datasource=OsmFile
 map.datasource.osmFile=sources/remete.osm
@@ -11,6 +11,7 @@ map.mapStyle.source=styles/osmstyle.csv
 map.renderer=PngRenderer
 map.renderer.outputFile=../../target/samples/remete.png
 
+map.size=1024
 
 map.west=18.921
 map.north=47.58
