--- a/samples/src/main/resources/remete-tiles.properties
+++ b/samples/src/main/resources/remete-tiles.properties
@@ -2,7 +2,7 @@ map=TilesMap
 
 map.zoom=14
 
-map.outputDir=../../target/samples/remete-tiles
+map.outputDir=output/remete-tiles
 map.datasource=OsmFile
 map.datasource.osmFile=sources/remete.osm
 
