--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -58,5 +58,10 @@
             <artifactId>renderer</artifactId>
             <version>0.1-SNAPSHOT</version>
         </dependency>
+         <dependency>
+            <groupId>net.anzix.kogutowicz</groupId>
+            <artifactId>samples</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
