--- a/samples/src/main/resources/nk.properties
+++ b/samples/src/main/resources/nk.properties
@@ -14,7 +14,7 @@ map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
 map.renderer=PngRenderer
-map.renderer.outputFile=../../target/samples/nagykovacsi.png
+map.renderer.outputFile=output/nagykovacsi.png
 
 
 
