--- a/samples/src/main/resources/remete-pdf.properties
+++ b/samples/src/main/resources/remete-pdf.properties
@@ -8,8 +8,8 @@ map.datasource.osmFile=sources/remete.osm
 map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
-map.renderer=PngRenderer
-map.renderer.outputFile=../../target/samples/remete.png
+map.renderer=PdfRenderer
+map.renderer.outputFile=output/remete.pdf
 
 map.size=1024
 
