--- a/samples/src/main/resources/remete-svg.properties
+++ b/samples/src/main/resources/remete-svg.properties
@@ -1,6 +1,6 @@
 map=ImageMap
 
-map.zoom=12
+map.zoom=14
 
 map.datasource=OsmFile
 map.datasource.osmFile=sources/remete.osm
@@ -8,10 +8,9 @@ map.datasource.osmFile=sources/remete.osm
 map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
-map.renderer=PdfRenderer
-map.renderer.outputFile=../../target/samples/remete.pdf
+map.renderer=SvgRenderer
+map.renderer.outputFile=output/remete.svg
 
-map.size=1024
 
 map.west=18.921
 map.north=47.58
