--- a/samples/src/main/resources/remete.properties
+++ b/samples/src/main/resources/remete.properties
@@ -1,6 +1,6 @@
 map=ImageMap
 
-map.zoom=14
+map.zoom=12
 
 map.datasource=OsmFile
 map.datasource.osmFile=sources/remete.osm
@@ -8,12 +8,12 @@ map.datasource.osmFile=sources/remete.osm
 map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
-map.renderer=SvgRenderer
-map.renderer.outputFile=../../target/samples/remete.svg
+map.renderer=PngRenderer
+map.renderer.outputFile=output/remete.png
 
+map.size=1024
 
 map.west=18.921
 map.north=47.58
 map.east=18.9912
 map.south=47.5312
-
