--- a/samples/src/main/resources/tartu-center.properties
+++ b/samples/src/main/resources/tartu-center.properties
@@ -9,7 +9,7 @@ map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
 map.renderer=PngRenderer
-map.renderer.outputFile=../../target/samples/tartu-center.png
+map.renderer.outputFile=output/tartu-center.png
 
 map.size=1024
 
