--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -2,13 +2,13 @@
     <parent>
         <artifactId>root</artifactId>
         <groupId>net.anzix.kogutowicz</groupId>
-        <version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.anzix.kogutowicz</groupId>
     <artifactId>assembly</artifactId>
     <name>assembly</name>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -56,12 +56,12 @@
         <dependency>
             <groupId>net.anzix.kogutowicz</groupId>
             <artifactId>renderer</artifactId>
-            <version>0.1</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
          <dependency>
             <groupId>net.anzix.kogutowicz</groupId>
             <artifactId>samples</artifactId>
-            <version>0.1</version>
+            <version>0.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
