--- a/samples/src/main/resources/remete.properties
+++ b/samples/src/main/resources/remete.properties
@@ -8,9 +8,9 @@ map.datasource.osmFile=sources/remete.osm
 map.mapStyle=CsvMapStyle
 map.mapStyle.source=styles/osmstyle.csv
 
-map.renderer=SystemOutputRenderer
-#map.renderer=PngRenderer
-#map.renderer.outputFile=output/remete.png
+#map.renderer=SystemOutputRenderer
+map.renderer=PngRenderer
+map.renderer.outputFile=output/remete.png
 
 map.size=1024
 
